wb-configs (3.3.0) stable; urgency=medium

  * Fix networking.service symlink in bullseye by removing networking.service.wb

 -- Ekaterina Volkova <ekaterina.volkova@wirenboard.ru>  Mon, 17 Oct 2022 12:59:47 +0300

wb-configs (3.2.3) stable; urgency=medium

  * Set correct access right to NetworkManager connections

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Wed, 12 Oct 2022 12:56:11 +0500

wb-configs (3.2.2) stable; urgency=medium

  * fix network interface user settings applying after updating via fit

 -- Ekaterina Volkova  <ekaterina.volkova@wirenboard.ru>  Mon, 11 Oct 2022 11:23:28 +0300

wb-configs (3.2.1) stable; urgency=medium

  * add apt pin to install wb-release-info from bullseye
  * prefer nodejs from nodesource (switch to bullseye, enable by default)

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Mon, 10 Oct 2022 11:59:03 +0600

wb-configs (3.2.0) stable; urgency=medium

  * add apt pin to install modemmanager dependencies from backports

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Tue, 20 Sep 2022 13:07:32 +0300

wb-configs (3.1.0) stable; urgency=medium

  * Add ModemManager and NetworkManager support

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Mon, 19 Sep 2022 15:48:21 +0500

wb-configs (3.0.2) stable; urgency=medium

  * fix broken debug console login on Wiren Board 7

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Mon, 19 Sep 2022 10:46:42 +0300

wb-configs (3.0.1) stable; urgency=medium

  * nginx: change fwupdate-uploading backend from nginx upload module to python cgi

 -- Vladimir Romanov <v.romanov@wirenboard.ru>  Mon, 04 Jul 2022 09:37:21 +0300

wb-configs (3.0.0) stable; urgency=medium

  * bullseye build
  * switch to mosquitto 2.0.11-1
  * switch to upstream nginx

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Mon, 22 Aug 2022 13:44:28 +0300

wb-configs (2.3.5) stable; urgency=medium

  * don't change baudrate in serial console. Noise on RX pin can make