@@ -1,0 +1,2 @@
+[Service]
+ExecCondition=/bin/bash /usr/lib/wb-configs/hostapd_execcondition.sh
